fix bug where inverted inputs menu is not visible

--- a/web/src/styles/inspector-dropdown.css
+++ b/web/src/styles/inspector-dropdown.css
@@ -5,7 +5,6 @@
   width: 100%;
   border: 1px solid var(--color-border-medium);
   border-radius: 6px;
-  overflow: hidden;
 }
 
 .inspector-dropdown .p-dropdown {
